--- a/project3/index.html
+++ b/project3/index.html
@@ -31,6 +31,10 @@ section p.name {
     margin-right: 1px;
 }
 
+p#p1Name {
+    text-decoration: underline;
+}
+
 </style>
 </head>
 <body>
@@ -41,6 +45,7 @@ section p.name {
     <p class ="name" id="p2Name">Player 2: </p>
     <p id="p2Score">0</p>
     <p id="message"></p>
+    
 
 </section>
 
